--- a/pombola/core/static/sass/_home_page_carousel.scss
+++ b/pombola/core/static/sass/_home_page_carousel.scss
@@ -1,6 +1,10 @@
 #home-carousel {
     background-color: transparent;
     margin-bottom: 1.5em;
+    img {
+        max-width: 100%;
+        height: auto;
+    }
 }
 
 .carousel {
